--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,20 @@
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html{
+    min-height: 100%;
+    position: relative;
+}
+
+body{
+    min-height: 100%;
+    margin: 0;
+    margin-bottom: relative;
+}
+
 .color1{
     background-color: white;
     width: auto;
@@ -7,11 +24,18 @@
     font-weight: bold;
     
 }
+
+main{
+    padding: 10%;
+}
+
 footer{
     background-color: white;
-    width: auto;
+    position: static;
+    bottom: 0;
+    width: 100%;
     text-align: center;
-    clear: both;
+    clear: inline-end;
 
 }
 a:hover{
